# AgentGENius

./: .gitignore  README.md  example.py  playground.ipynb  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  tools.ipynb
agentgenius/: __init__.py  agents.py  aggregator.py  analyzer.py  builtin_tools.py  cache.py  config.py  core.py  history.py  main.py  proto.ipynb  proto2.ipynb  task_management.py  task_managment.py  tasks.py  tools.ipynb  tools.py  tools_management.py  utils.py
tests/: test_agents.py  test_cache.py  test_tasks.py  test_tools.py
