[project]
name = "agentgenius"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "faker>=35.0.0",
    "googletrans>=4.0.2",
    "langdetect>=1.0.9",
    "logfire>=2.11.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pip>=24.3.1",
    "psutils>=3.3.8",
    "pydantic-ai>=0.0.15",
    "pydub>=0.25.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "selenium>=4.28.1",
    "setuptools>=75.8.0",
    "streamlit>=1.41.1",
    "tavily-python>=0.5.0",
    "trafilatura>=2.0.0",
    "wikipedia-api>=0.8.1",
]

[tool.ruff]
line-length = 120
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
lint.ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip() without an explicit strict= parameter
]

[tool.logfire]
ignore_no_config = true

[tool.dependencies]
nest-asyncio = "*"
